# neural-inference

./: .gitignore  Cargo.toml  DEMO_README.md  FORMULA_REFERENCE.md  Procfile  QUICKSTART.md  README.md  fly.toml  mock_data.json  nixpacks.toml  test_api_key.sh
src/: chat.rs  lib.rs  main.rs  profiles.rs
static/: chat.js  doc.md  index.html
